Bug 1812543 - [Cocoa] Check cached transferable properly in nsClipboard::HasDataMatchingFlavors; r=spohl

Differential Revision: https://phabricator.services.mozilla.com/D167932