widget/nsBaseClipboard.cpp
@@ -115,12 +115,7 @@ NS_IMETHODIMP nsBaseClipboard::EmptyClipboard(int32_t aWhichClipboard) {
     return NS_OK;
   }
 
-  if (mClipboardOwner) {
-    mClipboardOwner->LosingOwnership(mTransferable);
-    mClipboardOwner = nullptr;
-  }
-
-  mTransferable = nullptr;
+  ClearClipboardCache();
   return NS_OK;
 }
 
@@ -154,4 +149,12 @@ nsBaseClipboard::IsClipboardTypeSupported(int32_t aWhichClipboard,
   // We support global clipboard by default.
   *_retval = kGlobalClipboard == aWhichClipboard;
   return NS_OK;
+}
+
+void nsBaseClipboard::ClearClipboardCache() {
+  if (mClipboardOwner) {
+    mClipboardOwner->LosingOwnership(mTransferable);
+    mClipboardOwner = nullptr;
+  }
+  mTransferable = nullptr;
 }
